// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`3-style.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[aaaaaaaaaaaaaaaaaaaaaaaaaaaaaa]: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa

[aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa]: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa

[aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa]: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa

=====================================output=====================================
[aaaaaaaaaaaaaaaaaaaaaaaaaaaaaa]: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa

[aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa]:
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa

? [
    aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  ]
: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa

================================================================================
`;

exports[`3-style.yml 2`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
[aaaaaaaaaaaaaaaaaaaaaaaaaaaaaa]: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa

[aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa]: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa

[aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa]: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa

=====================================output=====================================
[aaaaaaaaaaaaaaaaaaaaaaaaaaaaaa]: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa

[aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa]:
    aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa

? [
      aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  ]
: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa

================================================================================
`;

exports[`array-key.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[1, 2, 3]: 123

=====================================output=====================================
[1, 2, 3]: 123

================================================================================
`;

exports[`array-key.yml 2`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
[1, 2, 3]: 123

=====================================output=====================================
[1, 2, 3]: 123

================================================================================
`;

exports[`array-value.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
123: [1, 2, 3]

=====================================output=====================================
123: [1, 2, 3]

================================================================================
`;

exports[`array-value.yml 2`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
123: [1, 2, 3]

=====================================output=====================================
123: [1, 2, 3]

================================================================================
`;

exports[`comment.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
? key
# comment
: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong

=====================================output=====================================
? key
# comment
: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong

================================================================================
`;

exports[`comment.yml 2`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
? key
# comment
: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong

=====================================output=====================================
? key
# comment
: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong

================================================================================
`;

exports[`comment-value.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
123: # hello

=====================================output=====================================
123: # hello

================================================================================
`;

exports[`comment-value.yml 2`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
123: # hello

=====================================output=====================================
123: # hello

================================================================================
`;

exports[`common.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
key1: value
key2: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong

=====================================output=====================================
key1: value
key2: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong

================================================================================
`;

exports[`common.yml 2`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
key1: value
key2: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong

=====================================output=====================================
key1: value
key2: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong

================================================================================
`;

exports[`explicit-key.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
? key1
: value
? key2
: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong
? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong
: value

=====================================output=====================================
key1: value
key2: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong
longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: value

================================================================================
`;

exports[`explicit-key.yml 2`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
? key1
: value
? key2
: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong
? longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong
: value

=====================================output=====================================
key1: value
key2: longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong
longlonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglonglong: value

================================================================================
`;

exports[`in-sequence.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
- a: b
  c: d

=====================================output=====================================
- a: b
  c: d

================================================================================
`;

exports[`in-sequence.yml 2`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
- a: b
  c: d

=====================================output=====================================
- a: b
  c: d

================================================================================
`;

exports[`key-with-leading-comment.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
? # comment
  key
: value

=====================================output=====================================
? # comment
  key
: value

================================================================================
`;

exports[`key-with-leading-comment.yml 2`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
? # comment
  key
: value

=====================================output=====================================
? # comment
  key
: value

================================================================================
`;

exports[`mapping.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
key:
  key: value

=====================================output=====================================
key:
  key: value

================================================================================
`;

exports[`mapping.yml 2`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
key:
  key: value

=====================================output=====================================
key:
    key: value

================================================================================
`;

exports[`merge-twice.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
.anchors:
  - &anchor1
    key: value
  - &anchor2
    another: prop

foo:
  bar: baz
  <<: *anchor1
  <<: *anchor2

=====================================output=====================================
.anchors:
  - &anchor1
    key: value
  - &anchor2
    another: prop

foo:
  bar: baz
  <<: *anchor1
  <<: *anchor2

================================================================================
`;

exports[`merge-twice.yml 2`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
.anchors:
  - &anchor1
    key: value
  - &anchor2
    another: prop

foo:
  bar: baz
  <<: *anchor1
  <<: *anchor2

=====================================output=====================================
.anchors:
    - &anchor1
      key: value
    - &anchor2
      another: prop

foo:
    bar: baz
    <<: *anchor1
    <<: *anchor2

================================================================================
`;

exports[`middle-comment.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
!!map # comment
a: 123

=====================================output=====================================
!!map # comment
a: 123

================================================================================
`;

exports[`middle-comment.yml 2`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
!!map # comment
a: 123

=====================================output=====================================
!!map # comment
a: 123

================================================================================
`;

exports[`middle-comments.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
!!map # comment 1
# comment 2
a: 123

=====================================output=====================================
!!map
# comment 1
# comment 2
a: 123

================================================================================
`;

exports[`middle-comments.yml 2`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
!!map # comment 1
# comment 2
a: 123

=====================================output=====================================
!!map
# comment 1
# comment 2
a: 123

================================================================================
`;

exports[`props.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
--- !!map &anchor
a: 123

=====================================output=====================================
---
!!map &anchor
a: 123

================================================================================
`;

exports[`props.yml 2`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
--- !!map &anchor
a: 123

=====================================output=====================================
---
!!map &anchor
a: 123

================================================================================
`;

exports[`props-in-map.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
a: !!map &anchor
  a: 123

=====================================output=====================================
a: !!map &anchor
  a: 123

================================================================================
`;

exports[`props-in-map.yml 2`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
a: !!map &anchor
  a: 123

=====================================output=====================================
a: !!map &anchor
    a: 123

================================================================================
`;

exports[`quote-key.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
"a": 123
'b': 123

=====================================output=====================================
"a": 123
"b": 123

================================================================================
`;

exports[`quote-key.yml 2`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
"a": 123
'b': 123

=====================================output=====================================
"a": 123
"b": 123

================================================================================
`;

exports[`sequence.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
key:
- value

=====================================output=====================================
key:
  - value

================================================================================
`;

exports[`sequence.yml 2`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
key:
- value

=====================================output=====================================
key:
    - value

================================================================================
`;

exports[`tag-key.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
? !!tag key
: value

=====================================output=====================================
!!tag key: value

================================================================================
`;

exports[`tag-key.yml 2`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
? !!tag key
: value

=====================================output=====================================
!!tag key: value

================================================================================
`;
